--- a/frontend/web/scss/03-blocks-and-lists/_blocks.scss
+++ b/frontend/web/scss/03-blocks-and-lists/_blocks.scss
@@ -238,7 +238,6 @@
     line-height: 1.5em;
     margin: 0 0 8px;
     overflow: hidden;
-    max-height: 66px;
 
     @include breakpoint('tablet') {
       font-size: 12px;
